added component for contracts creation

--- a/src/components/navigation-menu/navigation-menu.component.html
+++ b/src/components/navigation-menu/navigation-menu.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar color="primary">
-  <span>My App</span>
+  <span>Allane Mobility Group</span>
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
-    <button mat-menu-item routerLink="/">Home</button>
-    <button mat-menu-item routerLink="/about">About</button>
-    <button mat-menu-item routerLink="/contact">Contact</button>
+    <button mat-menu-item routerLink="/contracts">Contracts</button>
+    <button mat-menu-item routerLink="/vehicles">Vehicles</button>
+    <button mat-menu-item routerLink="/customers">Customers</button>
   </mat-menu>
 </mat-toolbar>
