--- a/src/components/contracts-list/contracts-list.component.html
+++ b/src/components/contracts-list/contracts-list.component.html
@@ -1,3 +1,9 @@
+<div style="display: flex; justify-content: end; margin: 15px">
+  <button [routerLink]="['new']" mat-raised-button color="primary">
+    Add new contract
+  </button>
+</div>
+
 <div class="example-container mat-elevation-z8">
   <div class="example-loading-shade" *ngIf="isLoadingResults">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
