added tailwind-css; added and refactored all components to review contracts/customers/vehicles

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,31 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.loading-cloak {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.15);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.details-container {
+  box-shadow: none;
+  max-width: 800px;
+  margin: 0 auto;
+  min-width: 400px;
+}
+
+a {
+  color: revert;
+  text-decoration: revert;
+}
