--- a/src/components/contracts/contracts-list/contracts-list.component.html
+++ b/src/components/contracts/contracts-list/contracts-list.component.html
@@ -60,6 +60,14 @@
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="7">
+          <div class="empty-table-message mat-h3 mat-subheading-1">
+            <p>No contracts found.</p>
+          </div>
+        </td>
+      </tr>
     </table>
   </div>
 
