--- a/src/components/customers/customers-list/customers-list.component.html
+++ b/src/components/customers/customers-list/customers-list.component.html
@@ -50,6 +50,14 @@
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="5">
+          <div class="empty-table-message mat-h3 mat-subheading-1">
+            <p>No customers found.</p>
+          </div>
+        </td>
+      </tr>
     </table>
   </div>
 
