--- a/src/components/customers/edit-customer-details/edit-customer-details.component.html
+++ b/src/components/customers/edit-customer-details/edit-customer-details.component.html
@@ -74,6 +74,7 @@
                   <div class="list-item-content">
                     <div><strong>First Name:</strong></div>
                     <mat-form-field class="form-container" appearance="fill">
+                      <mat-label>Enter first name:</mat-label>
                       <input
                         #firstNameMat="matInput"
                         formControlName="firstName"
@@ -92,6 +93,7 @@
                   <div class="list-item-content">
                     <div><strong>Last Name:</strong></div>
                     <mat-form-field class="form-container" appearance="fill">
+                      <mat-label>Enter last name:</mat-label>
                       <input
                         #lastNameMat="matInput"
                         formControlName="lastName"
@@ -110,6 +112,7 @@
                   <div class="list-item-content">
                     <div><strong>Birth Date:</strong></div>
                     <mat-form-field class="form-container" appearance="fill">
+                      <mat-label>Enter birth date:</mat-label>
                       <input
                         #birthDateMat="matInput"
                         matInput
