--- a/src/components/navigation-menu/navigation-menu.component.html
+++ b/src/components/navigation-menu/navigation-menu.component.html
@@ -1,26 +1,28 @@
-<mat-toolbar color="primary" class="mat-elevation-z4 flex justify-between">
-  <span>Allane Mobility Group</span>
-  <div>
-    <a
-      mat-button
-      routerLink="/contracts"
-      class="mat-nav-link"
-      routerLinkActive="active-link"
-      >Contracts</a
-    >
-    <a
-      mat-button
-      routerLink="/customers"
-      class="mat-nav-link"
-      routerLinkActive="active-link"
-      >Customers</a
-    >
-    <a
-      mat-button
-      routerLink="/vehicles"
-      class="mat-nav-link"
-      routerLinkActive="active-link"
-      >Vehicles</a
-    >
+<mat-toolbar color="primary" class="mat-elevation-z4">
+  <div class="flex justify-between m-auto w-1 max-w-7xl w-full">
+    <span>Allane Mobility Group</span>
+    <div>
+      <a
+        mat-button
+        routerLink="/contracts"
+        class="mat-nav-link"
+        routerLinkActive="active-link"
+        >Contracts</a
+      >
+      <a
+        mat-button
+        routerLink="/customers"
+        class="mat-nav-link"
+        routerLinkActive="active-link"
+        >Customers</a
+      >
+      <a
+        mat-button
+        routerLink="/vehicles"
+        class="mat-nav-link"
+        routerLinkActive="active-link"
+        >Vehicles</a
+      >
+    </div>
   </div>
 </mat-toolbar>
