--- a/src/components/vehicles/edit-vehicle-details/edit-vehicle-details.component.html
+++ b/src/components/vehicles/edit-vehicle-details/edit-vehicle-details.component.html
@@ -103,6 +103,7 @@
 
                     <div>
                       <mat-form-field class="form-container">
+                        <mat-label>Select brand:</mat-label>
                         <div class="relative">
                           <mat-select
                             #brandMat="matSelect"
@@ -140,6 +141,7 @@
                     <strong>Model:</strong>
                     <div>
                       <mat-form-field class="form-container">
+                        <mat-label>Select vehicle model:</mat-label>
                         <div class="relative">
                           <mat-select
                             formControlName="model"
@@ -176,6 +178,7 @@
                     <strong>Year:</strong>
                     <div>
                       <mat-form-field class="form-container" appearance="fill">
+                        <mat-label>Enter year:</mat-label>
                         <input
                           #yearMat="matInput"
                           type="number"
@@ -200,6 +203,7 @@
                     <strong>VIN:</strong>
                     <div>
                       <mat-form-field class="form-container" appearance="fill">
+                        <mat-label>Enter VIN:</mat-label>
                         <input
                           #vinMat="matInput"
                           formControlName="vin"
@@ -222,6 +226,7 @@
                     <strong>Price:</strong>
                     <div>
                       <mat-form-field class="form-container" appearance="fill">
+                        <mat-label>Enter price:</mat-label>
                         <input
                           #priceMat="matInput"
                           type="number"
