--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navigation-menu></app-navigation-menu>
 
-<router-outlet></router-outlet>
+<div class="max-w-6xl m-auto">
+  <router-outlet></router-outlet>
+</div>
