--- a/src/components/contracts/create-contract-details/create-contract-details.component.html
+++ b/src/components/contracts/create-contract-details/create-contract-details.component.html
@@ -1,4 +1,8 @@
 <mat-card class="relative">
+  <mat-card-header class="flex justify-center">
+    <mat-card-title>Create new contract</mat-card-title>
+  </mat-card-header>
+
   <mat-card-content>
     <mat-stepper
       [formGroup]="contractFormGroup"
@@ -69,14 +73,13 @@
 
           <div>
             <button mat-button matStepperPrevious>Back</button>
-            <button mat-button matStepperNext>Next</button>
           </div>
         </form>
       </mat-step>
     </mat-stepper>
   </mat-card-content>
 
-  <mat-card-actions>
+  <mat-card-actions class="flex justify-end">
     <button
       (click)="createContract()"
       [disabled]="!contractFormGroup.valid"
