--- a/src/components/contracts/contracts-list/contracts-list.component.html
+++ b/src/components/contracts/contracts-list/contracts-list.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex; justify-content: end; margin: 15px">
+<div class="flex justify-end m-4">
   <button [routerLink]="['new']" mat-raised-button color="primary">
     Add new contract
   </button>
