--- a/src/components/customers/customers-list/customers-list.component.html
+++ b/src/components/customers/customers-list/customers-list.component.html
@@ -12,7 +12,7 @@
   <div class="table-container">
     <table
       mat-table
-      [dataSource]="customers$ | async"
+      [dataSource]="customers$ | async | nonNullable"
       matSort
       class="mat-elevation-z8">
       <ng-container matColumnDef="id">
